# SkewSentry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: tutorial.ipynb
examples/http/: ecommerce_transactions.parquet  features.yml  offline_features.py  online_features.js  package.json
examples/nyc_taxi/: features.yml  tutorial_nyc_taxi.ipynb
examples/python/: offline_features.py  test_data.parquet
examples/simple/: features.yml  offline_features.py  online_features.py
examples/simple_usage/: tutorial.ipynb
skewsentry/: __init__.py  cli.py  utils.py
skewsentry/adapters/: __init__.py  base.py  feast_adapter.py  http_adapter.py  python_func.py
skewsentry/templates/: report.html.j2
skewsentry/tests/: test_adapter_feast.py  test_adapter_python.py  test_cli.py  test_compare.py  test_inputs.py  test_runner.py  test_spec.py
tests/integration/e2e/: test_cli_check.py  test_http_adapter_e2e.py  test_python_adapter_e2e.py  test_runner_end_to_end.py
tests/unit/: test_adapter_http.py  test_adapters_http.py  test_adapters_python.py  test_align.py  test_report.py  test_runner.py  test_smoke.py  test_utils.py
