[project]
name = "skewsentry"
version = "0.1.0"
description = "SkewSentry: check training ↔ serving feature parity with tolerances and clear reports"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "SkewSentry Authors" } ]
dependencies = [
  "pandas>=2.0",
  "pyarrow>=12",
  "pydantic>=2",
  "typer>=0.12",
  "jinja2>=3",
  "pyyaml>=6",
  "requests>=2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "scipy",
  "tabulate",
  "rich",
  "build",
  "orjson"
]

[project.scripts]
skewsentry = "skewsentry.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "e2e: end-to-end tests"
]

